--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "redis": "^5.10.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
